# dex-pool-scanner-rs

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  protocols.json.example  tokens.json.example
docs/: README.md  configuration.md  pool-discovery.md  protocols.md  troubleshooting.md
examples/: basic_discovery.rs
src/: lib.rs  main.rs  types.rs
src/config/: mod.rs
src/discovery/: mod.rs
src/liquidity_pools/: mod.rs
src/rpc/: mod.rs
