[package]
name = "dex-pool-scanner-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "0.9.2", features = ["full", "serde"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "=1.0.210", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
eyre = "0.6"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
